testsuite/tests/contrib/lkt_semantic/basic_subtyping/test.out
Resolving test.lkt
==================
Id   <RefId "Int" test.lkt:5:26-5:29>
     references <StructDecl prelude: "Int">

Id   <RefId "Baseclass" test.lkt:8:18-8:27>
     references <ClassDecl "Baseclass" test.lkt:4:1-6:2>

Id   <RefId "Subclass" test.lkt:10:21-10:29>
     references <ClassDecl "Subclass" test.lkt:8:1-8:30>

Id   <RefId "Baseclass" test.lkt:12:19-12:28>
     references <ClassDecl "Baseclass" test.lkt:4:1-6:2>

Id   <RefId "Subclass" test.lkt:14:26-14:34>
     references <ClassDecl "Subclass" test.lkt:8:1-8:30>

Id   <RefId "Baseclass" test.lkt:14:37-14:46>
     references <ClassDecl "Baseclass" test.lkt:4:1-6:2>

Id   <RefId "a" test.lkt:14:49-14:50>
     references <FunArgDecl "a" test.lkt:14:23-14:34>

Expr <RefId "a" test.lkt:14:49-14:50>
     has type <ClassDecl "Baseclass" test.lkt:4:1-6:2>

Id   <RefId "Subclass" test.lkt:15:26-15:34>
     references <ClassDecl "Subclass" test.lkt:8:1-8:30>

Id   <RefId "Baseclass" test.lkt:15:39-15:48>
     references <ClassDecl "Baseclass" test.lkt:4:1-6:2>

Id   <RefId "Bool" test.lkt:15:51-15:55>
     references <EnumTypeDecl prelude: "Bool">

Id   <RefId "a" test.lkt:15:59-15:60>
     references <FunArgDecl "a" test.lkt:15:23-15:34>

Expr <RefId "a" test.lkt:15:59-15:60>
     has type <ClassDecl "Baseclass" test.lkt:4:1-6:2>

Id   <RefId "b" test.lkt:15:64-15:65>
     references <FunArgDecl "b" test.lkt:15:36-15:48>

Expr <RefId "b" test.lkt:15:64-15:65>
     has type <ClassDecl "Baseclass" test.lkt:4:1-6:2>

Expr <BinOp test.lkt:15:59-15:65>
     has type <EnumTypeDecl prelude: "Bool">

Expr <ParenExpr test.lkt:15:58-15:66>
     has type <EnumTypeDecl prelude: "Bool">

Id   <RefId "Baseclass" test.lkt:16:26-16:35>
     references <ClassDecl "Baseclass" test.lkt:4:1-6:2>

Id   <RefId "Subsubclass" test.lkt:16:40-16:51>
     references <ClassDecl "Subsubclass" test.lkt:10:1-10:32>

Id   <RefId "Bool" test.lkt:16:54-16:58>
     references <EnumTypeDecl prelude: "Bool">

Id   <RefId "test_subtyping_2" test.lkt:17:3-17:19>
     references <FunDecl "test_subtyping_2" test.lkt:15:1-15:66>

Expr <RefId "test_subtyping_2" test.lkt:17:3-17:19>
     has type <FunctionType prelude: "(Subclass, Baseclass) -> Bool">

Id   <RefId "b" test.lkt:17:20-17:21>
     references <FunArgDecl "b" test.lkt:16:37-16:51>

Expr <RefId "b" test.lkt:17:20-17:21>
     has type <ClassDecl "Subclass" test.lkt:8:1-8:30>

Id   <RefId "b" test.lkt:17:23-17:24>
     references <FunArgDecl "b" test.lkt:16:37-16:51>

Expr <RefId "b" test.lkt:17:23-17:24>
     has type <ClassDecl "Baseclass" test.lkt:4:1-6:2>

Expr <CallExpr test.lkt:17:3-17:25>
     has type <EnumTypeDecl prelude: "Bool">

Id   <RefId "Subclass" test.lkt:18:35-18:43>
     references <ClassDecl "Subclass" test.lkt:8:1-8:30>

Id   <RefId "Subclass2" test.lkt:18:46-18:55>
     references <ClassDecl "Subclass2" test.lkt:12:1-12:31>

Id   <RefId "a" test.lkt:18:58-18:59>
     references <FunArgDecl "a" test.lkt:18:32-18:43>

test.lkt:18:58: error: Mismatched types: expected `Subclass2`, got `Subclass`
18 | @invalid fun test_subtyping_4 (a: Subclass): Subclass2 = a
   |                                                          ^

